fixing responsive and add photo in aside

--- a/index.html
+++ b/index.html
@@ -65,9 +65,6 @@
         <article id="about" class="about">
           <h2>About Me</h2>
           <div class="about-wrap">
-            <div class="about-img">
-              <img src="./src/images/propict.png" alt="profile-photo" />
-            </div>
             <div class="about-text">
               <p>
                 Saya adalah Alumni UIN Syarif Hidayatullah tahun kelulusan 2013
@@ -149,6 +146,9 @@
         <article class="profile card">
           <header>
             <h2>Muhammad Zainul Ahda</h2>
+            <div class="profile-img">
+              <img src="./src/images/propict.png" alt="profile-photo" />
+            </div>
           </header>
           <section>
             <h3>Informasi Lainnya</h3>
